# desmonic

./: .gitignore  Cargo.toml  bacon.toml
src/: eval.rs  func.rs  lexer.rs  main.rs  parser.rs  state.rs  types.rs  verify.rs
userscript/: desmonicscript.user.js
