[package]
name = "desmonic"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.10.0", features = ["std"] }
chumsky = { version = "0.11.1" }
clap = { version = "4.5.50", features = ["derive"] }
colog = "1.4.0"
log = "0.4.28"
logos = { version = "0.15.1" }
serde = { version = "1.0.228", features = ["derive"] }
